[tool.poetry]
name = "glamify"
version = "0.1.0"
description = ""
authors = ["oscar50 <oscar@whaleandjaguar.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.27.2"
pandas = "^2.1.1"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
